# Anubis

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  ancrypt.py  anubis.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  obfuscate.yml
docs/superpowers/plans/: 2026-05-11-cicd-mode.md
docs/superpowers/specs/: 2026-05-11-cicd-mode-design.md
example/: script.py
gitbook/: README.md  SUMMARY.md  ci-cd.md  development.md  installation.md  usage.md
gitbook/features/: README.md  anti-debug.md  bcc.md  big-script.md  blind.md  carbon.md  dynamic-imports.md  encrypt.md  flatten.md  import-alias.md  junk-code.md  mix-strings.md  opaque.md  rft.md  semantic-noise.md  xor-strings.md
src/anubis/: __init__.py  __main__.py  cli.py  config.py  crypto.py  obfuscators.py  terminal.py
tests/: check_obf.sh  test_cli.py  test_config.py  test_terminal.py
tests/scripts/: test_classes.py  test_combined.py  test_control_flow.py  test_decorators.py  test_exceptions.py  test_generators.py  test_imports.py  test_math.py  test_strings.py
