[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anubis-obfuscator"
version = "2.0.0"
description = "Python source obfuscator with AES encryption, identifier renaming, junk code, and anti-debug injection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.23.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/GRodolphe/Anubis"
"Original Project" = "https://github.com/0sir1ss/Anubis"

[project.scripts]
anubis = "anubis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anubis"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.35",
    "Cython>=3.1.1",
    "pytest>=8.0",
    "prek>=0.3",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["ancrypt.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length — enforced by formatter
    "SIM108", # ternary operator — sometimes less readable
    "B904",   # raise-without-from-inside-except — intentional in error()
]

[tool.ruff.lint.per-file-ignores]
"tests/scripts/*.py" = ["SIM110", "SIM113"]  # test scripts favour explicit loops

[tool.ruff.lint.isort]
known-first-party = ["anubis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# ty — type checker
# ---------------------------------------------------------------------------

[tool.ty.environment]
python-version = "3.10"
